# fair_prompt_optimizer

./: .gitignore  CLAUDE.md  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py  testing_guide.md
.claude/: settings.json
.github/workflows/: ci.yml
cli_test/: examples.json  math_agent_config.json  math_agent_mipro.json  math_agent_optimized.json  multi_agent_config.json  my_agent.json  research_team_config.json  research_team_optimized.json  sentiment_adapter_test.json  sentiment_config.json  sentiment_exact.json  sentiment_fuzzy.json  sentiment_mipro.json  sentiment_mipro_heavy.json  sentiment_mipro_medium.json  sentiment_optimized.json  simple_llm_config.json  test_examples.json
demo_exmple_files/: agent_initial.json  agent_optimized.json  agent_optimized_medium.json  classifier_initial.json  classifier_optimized.json  classifier_optimized_mipro.json
demo_exmple_files/classifier/: classifier_initial.json  classifier_optimized_strict_metric.json  classifier_round_1.json  classifier_round_2.json  classifier_round_3.json
demo_exmple_files/single_agent/: agent_initial.json  agent_initial_medium.json  agent_initial_v2.json  agent_optimized_v2.json
docs/: CONFIG_REFERENCE.md  json_contracts.md
examples/: 01_simple_llm_example.py  02_agent_example.py  03_multi_agent_example.py  __init__.py  agent_initial.json  agent_optimized.json  classifier_optimized.json  examples.py  optimize_fair_agent.py  optimize_fair_agent_bootstrap.py  optimize_fair_agent_mipro.py  optimize_math_agent.py  optimize_output_format.py  research_team_initial.json  research_team_optimized.json
examples/formatted_output_agent/: agent_config_optimized.json
examples/output_format_example_files/: agent_config.json  examples.json
examples/prompts/: math_agent_optimized.json
examples/training_data/: math_examples.json  research_datagatherer_examples.json  research_manager_examples.json  research_summarizer_examples.json  sentiment_examples.json
fair_prompt_optimizer/: __init__.py  cli.py  config.py  fair_agent_module.py  metrics.py  optimizers.py  registry.py  translator.py
fair_prompt_optimizer/optimizers/: __init__.py  agent.py  base.py  multi_agent.py  simple_llm.py
prompts/: math_agent_base.json  math_agent_bootstrap.json
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_manager_interface.py  test_error_handling.py  test_fair_agent_module.py  test_integration.py  test_metrics.py  test_optimization_quality.py  test_optimizers.py  test_registry.py  test_translator.py
tests/integration/: test_fairlib_integration.py
