[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair_prompt_optimizer"
version = "0.1.0"
description = "Prompt optimization utility for FAIR-LLM using DSPy optimizers"
readme = "README.md"
authors = [
    {name = "USAFA AI Center", email = ""}
]
keywords = ["llm", "prompt-optimization", "dspy", "fair-llm", "agents"]
requires-python = ">=3.10"
dependencies = [
    "dspy>=2.5.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
fair-optimize = "fair_prompt_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/usafa-ai/fair_prompt_optimizer"
Documentation = "https://github.com/usafa-ai/fair_prompt_optimizer#readme"
Repository = "https://github.com/usafa-ai/fair_prompt_optimizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_prompt_optimizer*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
