[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair_prompt_optimizer"
version = "0.1.0"
description = "Prompt optimization utility for FAIR-LLM using DSPy optimizers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "USAFA AI Center", email = "ai-center@usafa.edu"}
]
keywords = ["llm", "prompt-optimization", "dspy", "fair-llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dspy>=2.5.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "optuna>=3.0.0",
    "apscheduler>=3.10.0",
    "nest-asyncio>=1.5.0",
    "cryptography>=46.0.0",
    "python-multipart",
    "fair-llm @ git+https://github.com/USAFA-AI-Center/fair_llm.git@prompt-optimization-app-interface",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
fair-optimize = "fair_prompt_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/usafa-ai/fair_prompt_optimizer"
Documentation = "https://github.com/usafa-ai/fair_prompt_optimizer#readme"
Repository = "https://github.com/usafa-ai/fair_prompt_optimizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_prompt_optimizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
